--- a/.prospector.yaml
+++ b/.prospector.yaml
@@ -6,6 +6,7 @@ pylint:
     # Pylint is sometimes quite bad at the type inference necessary for these.
     - unsubscriptable-object
     - unsupported-membership-test
+    - not-an-iterable
     # This one is too picky (it complains about *args, **kwargs) and errors of
     # this type are trivial to catch with minimal actual testing
     - arguments-differ
