--- a/modd.conf
+++ b/modd.conf
@@ -1,5 +1,5 @@
-README.rst CONTRIBUTING.rst docs/*.rst docs/conf.py walter/**.py {
-    prep: cd docs; make html
+README.rst CONTRIBUTING.rst CHANGELOG.rst docs/*.rst docs/conf.py walter/**.py {
+    prep: cd docs; poetry run make html
 }
 
 docs/_build/html/** {
