--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,3 +26,7 @@ importlib-metadata = "^1.6.0"
 
 [tool.poetry.extras]
 docs = ["sphinx", "sphinx-rtd-theme"]
+
+[build-system]
+requires = ["poetry>=0.12"]
+build-backend = "poetry.masonry.api"
