--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    sha: 5bf6c09bfa1297d3692cadd621ef95f1284e33c0
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v2.5.0
     hooks:
     -   id: check-added-large-files
     -   id: check-case-conflict
@@ -8,14 +8,15 @@ repos:
     -   id: debug-statements
     -   id: end-of-file-fixer
     -   id: trailing-whitespace
--   repo: https://github.com/Lucas-C/pre-commit-hooks
-    sha: v1.0.1
+  - repo: https://github.com/Lucas-C/pre-commit-hooks
+    rev: v1.1.7
     hooks:
     -   id: forbid-crlf
         exclude: \.(csv|bat)$
     -   id: forbid-tabs
         exclude: Makefile|\.bat$
--   repo: https://github.com/excitedleigh/shed
-    rev: pre-commit
+  - repo: https://github.com/psf/black
+    rev: 19.10b0
     hooks:
-    -   id: shed
+      - id: black
+        language_version: python3.8
