--- a/modd.conf
+++ b/modd.conf
@@ -1,5 +1,5 @@
 README.rst CONTRIBUTING.rst CHANGELOG.rst docs/*.rst docs/conf.py walter/**.py {
-    prep: cd docs; poetry run make html
+    prep: nox -s docs
 }
 
 docs/_build/html/** {
